@@ -12251,4 +12251,34 @@ No need char
 Subject length lower bound = 8
 Starting byte set: < o t u 
 
+/a(*SKIP)c|b(*ACCEPT)|/+SI
+Capturing subpattern count = 0
+No options
+No first char
+No need char
+Study returned NULL
+    a
+ 0: 
+ 0+ 
+
+/a(*SKIP)c|b(*ACCEPT)cd(*ACCEPT)|x/SI
+Capturing subpattern count = 0
+No options
+No first char
+No need char
+Subject length lower bound = -1
+Starting byte set: a b x 
+    ax
+ 0: x
+
+'a*(*ACCEPT)b'+
+    \N\N
+No match
+    abc\N\N
+ 0: a
+ 0+ bc
+    bbb\N\N 
+ 0: 
+ 0+ bb
+
 /-- End of testinput2 --/
